refactor: optimize collections and modernize string formatting